--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "prisma": "^4.16.2"
-  }
+  },
+  "name": "cjr-projeto",
+  "description": "Projeto destinado ao processo Trainee da CJR",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "src/index.js"
+  },
+  "type": "module",
+  "author": "Gustavo",
+  "license": "ISC"
 }
