--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "markdown-it": "^13.0.1",
     "nodemon": "^3.0.1",
     "prisma": "^4.16.2"
   },
